2003-05-29  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-audio-time.h (set_samples_per_second_keeptime): Added. 
	* library version to 11:0:2

2003-02-05  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-engine.cpp (is_finite_length): Added.

2003-02-03  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-engine.h (is_locked_for_editing): Added.

	* eca-engine.h (ECA_ENGINE::Engine_command): Added 
	enums 'ep_edit_lock' and 'ep_edit_unlock'.

2003-02-02  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-engine.h (ECA_ENGINE::Engine_command): Added 
	enum 'ep_prepare'.

2003-01-30  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* samplebuffer.cpp (resample_get_quality): added

	* samplebuffer.cpp (resample_set_quality): added

	* library version to 10:0:1

2003-01-07  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* library version 9:0:0 frozen

2002-11-18  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-chainsetup-position.h: Added a separate public
	API for maximum chainsetup length. This is to avoid
	confusion between maximum and actual lengths.

2002-10-30  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-control.cpp (last_value_to_string): added
	* eca-logger-wellformed.cpp (create_wellformed_message): added

2002-10-26  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-chainop.h (output_samples): renamed to max_output_samples()
	* eca-audio-position.h (set_length_in_samples,
	length_in_samples, set_position_in_samples,
	position_in_samples): turned into non-virtuals

2002-10-22  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-operator.h (parameter_description): turned into
	const member

2002-10-16  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* NOTE: from now on, the library version 
	presents the public API version number, not 
	the ABI version.
	* removed interface version from library 
	base name
	* library version changed to 9:0:0

2002-10-04  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-control.h (print_last_error): function removed
