@@ -1,3 +1,7 @@
+2003-08-13  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
+
+	* eca-chainsetup.cpp (add_default_midi_device): Added.
+
 2003-05-29  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
 
 	* eca-audio-time.h (set_samples_per_second_keeptime): Added. 
